# inchi-rs

./: .gitattributes  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md
.github/workflows/: ci.yml
crates/inchi/: Cargo.toml  README.md
crates/inchi-sys/: Cargo.toml  README.md  build.rs
crates/inchi-sys/src/: bindings.rs  lib.rs
crates/inchi/src/: convert.rs  error.rs  guide.rs  ixa.rs  lib.rs  molecule.rs  options.rs  output.rs  polymer.rs  raw.rs  structure.rs  validate.rs
crates/inchi/tests/: vectors.rs
crates/inchi/tests/fixtures/: aspirin.mol  benzene.mol  caffeine.mol  ethanol.mol  glucose.mol  ibuprofen.mol  l_alanine.mol  l_tryptophan.mol  methane.mol  methane_water.sdf  polymer_sru.mol  sodium_acetate.mol
